--- a/content/posts/2023-07-11-new-site.md
+++ b/content/posts/2023-07-11-new-site.md
@@ -1,5 +1,5 @@
 ---
-slug: fan-game-hiatus
+slug: new-site
 Author: TheCrafters001
 title: New Site!
 description: Hey! I created a new site using Pelican!
